Added more projects

--- a/index.html
+++ b/index.html
@@ -278,20 +278,12 @@
                   <h4 class="project__description--sub-title">
                     HTML, CSS, JavaScript, Nextjs
                   </h4>
-                  <p class="project__description--para">
-                    Saas Landing Page
-                  </p>
+                  <p class="project__description--para">Saas Landing Page</p>
                   <div class="project__description--links">
-                    <a
-                      href="add link"
-                      class="project__description--link"
-                    >
+                    <a href="add link" class="project__description--link">
                       <i class="fab fa-github"></i>
                     </a>
-                    <a
-                      href="add link"
-                      class="project__description--link"
-                    >
+                    <a href="add link" class="project__description--link">
                       <i class="fas fa-link"></i>
                     </a>
                   </div>
@@ -315,19 +307,13 @@
                     HTML, CSS, JavaScript, Nextjs
                   </h4>
                   <p class="project__description--para">
-                    Creating Google Drive Clone. 
+                    Creating Google Drive Clone.
                   </p>
                   <div class="project__description--links">
-                    <a
-                      href="add link"
-                      class="project__description--link"
-                    >
+                    <a href="add link" class="project__description--link">
                       <i class="fab fa-github"></i>
                     </a>
-                    <a
-                      href="add link"
-                      class="project__description--link"
-                    >
+                    <a href="add link" class="project__description--link">
                       <i class="fas fa-link"></i>
                     </a>
                   </div>
@@ -335,42 +321,37 @@
               </div>
             </li>
 
-
             <li class="project">
               <div class="project__wrapper">
                 <img
-                  src="./assets/google mockup.png"
+                  src="./assets/Car Directory in React.jpg"
                   class="project__img"
-                  alt="Another Project"
+                  alt="California Car Project Project"
                 />
                 <div class="project__wrapper--bg"></div>
                 <div class="project__description">
                   <h3 class="project__description--title">
-                    Another Project - Coming soon!
+                    California Car Directory 
                   </h3>
                   <h4 class="project__description--sub-title">
-                    HTML, CSS, JavaScript, Nextjs
+                    HTML, CSS, JavaScript, React 
                   </h4>
                   <p class="project__description--para">
-                    Details coming soon... 
+                    Created the California car directory,
+                    search filters and access to API database using React.
                   </p>
                   <div class="project__description--links">
-                    <a
-                      href="add link"
-                      class="project__description--link"
-                    >
+                    <a href="https://github.com/Nalinaka/calicardirectory" 
+                    class="project__description--link">
                       <i class="fab fa-github"></i>
                     </a>
-                    <a
-                      href="add link"
-                      class="project__description--link"
-                    >
+                    <a href="https://nalinaka.github.io/calicardirectory/" class="project__description--link">
                       <i class="fas fa-link"></i>
                     </a>
                   </div>
                 </div>
               </div>
-            </li> 
+            </li>
 
             <li class="project">
               <div class="project__wrapper">
@@ -462,7 +443,7 @@
                   </h4>
                   <p class="project__description--para">
                     Created a cat adoption agency to display, sort filters,
-                    search filters and access to API database. 
+                    search filters and access to API database.
                   </p>
                   <div class="project__description--links">
                     <a
@@ -471,7 +452,10 @@
                     >
                       <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://nalinaka.github.io/Ilovecats/" class="project__description--link">
+                    <a
+                      href="https://nalinaka.github.io/Ilovecats/"
+                      class="project__description--link"
+                    >
                       <i class="fas fa-link"></i>
                     </a>
                   </div>
