Completed adding more project details

--- a/index.html
+++ b/index.html
@@ -248,12 +248,14 @@
                   <div class="project__description--links">
                     <a
                       href="https://github.com/Nalinaka/Treact-Clone"
+                      target="_blank"
                       class="project__description--link"
                     >
                       <i class="fab fa-github"></i>
                     </a>
                     <a
                       href="https://nalinaka.github.io/Treact-Clone/"
+                      target="_blank"
                       class="project__description--link"
                     >
                       <i class="fas fa-link"></i>
@@ -281,9 +283,11 @@
                   <p class="project__description--para">Saas Landing Page</p>
                   <div class="project__description--links">
                     <a href="add link" class="project__description--link">
+                      target="_blank"
                       <i class="fab fa-github"></i>
                     </a>
                     <a href="add link" class="project__description--link">
+                      target="_blank"
                       <i class="fas fa-link"></i>
                     </a>
                   </div>
@@ -310,10 +314,14 @@
                     Creating Google Drive Clone.
                   </p>
                   <div class="project__description--links">
-                    <a href="add link" class="project__description--link">
+                    <a href="https://github.com/Nalinaka/StoreIt" 
+                    target="_blank"
+                    class="project__description--link">
                       <i class="fab fa-github"></i>
                     </a>
-                    <a href="add link" class="project__description--link">
+                    <a href="https://github.com/Nalinaka/StoreIt" 
+                    target="_blank"
+                    class="project__description--link">
                       <i class="fas fa-link"></i>
                     </a>
                   </div>
@@ -342,10 +350,13 @@
                   </p>
                   <div class="project__description--links">
                     <a href="https://github.com/Nalinaka/calicardirectory" 
+                    target="_blank"
                     class="project__description--link">
                       <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://nalinaka.github.io/calicardirectory/" class="project__description--link">
+                    <a href="https://nalinaka.github.io/calicardirectory/" 
+                    target="_blank"
+                    class="project__description--link">
                       <i class="fas fa-link"></i>
                     </a>
                   </div>
@@ -375,12 +386,14 @@
                   <div class="project__description--links">
                     <a
                       href="https://github.com/Nalinaka/Memory-Game"
+                      target="_blank"
                       class="project__description--link"
                     >
                       <i class="fab fa-github"></i>
                     </a>
                     <a
                       href="https://nalinaka.github.io/Memory-Game/"
+                      target="_blank"
                       class="project__description--link"
                     >
                       <i class="fas fa-link"></i>
@@ -413,12 +426,14 @@
                   <div class="project__description--links">
                     <a
                       href="https://github.com/Nalinaka/Advanced-Portfolio"
+                      target="_blank"
                       class="project__description--link"
                     >
                       <i class="fab fa-github"></i>
                     </a>
                     <a
                       href="https://nalinaka.github.io/Advanced-Portfolio/"
+                      target="_blank"
                       class="project__description--link"
                     >
                       <i class="fas fa-link"></i>
@@ -448,12 +463,14 @@
                   <div class="project__description--links">
                     <a
                       href="https://github.com/Nalinaka/Ilovecats"
+                      target="_blank"
                       class="project__description--link"
                     >
                       <i class="fab fa-github"></i>
                     </a>
                     <a
                       href="https://nalinaka.github.io/Ilovecats/"
+                      target="_blank"
                       class="project__description--link"
                     >
                       <i class="fas fa-link"></i>
