Fixed project info

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <i class="fa-brands fa-github"></i>
             </a>
             <a
-              href="./assets/Nalini Krishan Resume.pdf.pdf"
+              href="./assets/Nalini Krishan Resume.pdf"
               target="_blank"
               class="social__link"
             >
@@ -264,7 +264,7 @@
                 </div>
               </div>
             </li>
-
+            <!-- 
             <li class="project">
               <div class="project__wrapper">
                 <img
@@ -293,9 +293,9 @@
                   </div>
                 </div>
               </div>
-            </li>
+            </li> -->
 
-            <li class="project">
+            <!-- <li class="project">
               <div class="project__wrapper">
                 <img
                   src="./assets/google drive clone.jpg"
@@ -327,7 +327,7 @@
                   </div>
                 </div>
               </div>
-            </li>
+            </li> -->
 
             <li class="project">
               <div class="project__wrapper">
@@ -339,24 +339,28 @@
                 <div class="project__wrapper--bg"></div>
                 <div class="project__description">
                   <h3 class="project__description--title">
-                    California Car Directory 
+                    California Car Directory
                   </h3>
                   <h4 class="project__description--sub-title">
-                    HTML, CSS, JavaScript, React 
+                    HTML, CSS, JavaScript, React
                   </h4>
                   <p class="project__description--para">
-                    Created the California car directory,
-                    search filters and access to API database using React.
+                    Created the California car directory, search filters and
+                    access to API database using React.
                   </p>
                   <div class="project__description--links">
-                    <a href="https://github.com/Nalinaka/calicardirectory" 
-                    target="_blank"
-                    class="project__description--link">
+                    <a
+                      href="https://github.com/Nalinaka/calicardirectory"
+                      target="_blank"
+                      class="project__description--link"
+                    >
                       <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://nalinaka.github.io/calicardirectory/" 
-                    target="_blank"
-                    class="project__description--link">
+                    <a
+                      href="https://nalinaka.github.io/calicardirectory/"
+                      target="_blank"
+                      class="project__description--link"
+                    >
                       <i class="fas fa-link"></i>
                     </a>
                   </div>
@@ -403,7 +407,7 @@
               </div>
             </li>
 
-            <li class="project">
+            <!-- <li class="project">
               <div class="project__wrapper">
                 <img
                   src="./assets/advanced Portfolio.jpg"
@@ -441,7 +445,7 @@
                   </div>
                 </div>
               </div>
-            </li>
+            </li> -->
 
             <li class="project">
               <div class="project__wrapper">
@@ -522,7 +526,7 @@
               Contact
             </a>
             <a
-              href="./assets/Nalini Krishan Resume.pdf.pdf"
+              href="./assets/Nalini Krishan Resume.pdf"
               target="_blank"
               class="footer__social--link link__hover-effect link__hover-effect-white"
             >
